--- a/fly.toml
+++ b/fly.toml
@@ -1,18 +1,20 @@
-# fly.toml file generated for yz-personal-site on 2022-05-31T14:13:36+08:00
+# fly.toml file generated for yzyz-site on 2022-05-31T15:24:47+08:00
 
-app = "yz-personal-site"
+app = "yzyz-site"
 
 kill_signal = "SIGINT"
 kill_timeout = 5
 processes = []
 
 [env]
+  PORT = "8080"
 
 [experimental]
   allowed_public_ports = []
   auto_rollback = true
 
 [[services]]
+  http_checks = []
   internal_port = 8080
   processes = ["app"]
   protocol = "tcp"
