--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@remix-run/node": "^1.5.1",
     "@remix-run/react": "^1.5.1",
     "@remix-run/serve": "^1.5.1",
+    "highlight.js": "^9.18.1",
     "marked": "^4.0.16",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
@@ -22,6 +23,7 @@
     "@remix-run/dev": "^1.5.1",
     "@remix-run/eslint-config": "^1.5.1",
     "@tailwindcss/typography": "^0.5.2",
+    "@types/highlight.js": "^10.1.0",
     "@types/marked": "^4.0.3",
     "@types/react": "^17.0.45",
     "@types/react-dom": "^17.0.17",
