--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "highlight.js": "^9.18.1",
     "marked": "^4.0.16",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "tiny-invariant": "^1.2.0"
   },
   "devDependencies": {
     "@remix-run/dev": "^1.5.1",
