--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@remix-run/node": "^1.5.1",
     "@remix-run/react": "^1.5.1",
     "@remix-run/serve": "^1.5.1",
+    "@supabase/supabase-js": "^1.35.3",
     "highlight.js": "^9.18.1",
     "marked": "^4.0.16",
     "react": "^17.0.2",
