--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
     "start": "remix-serve build"
   },
   "dependencies": {
+    "@prisma/client": "^3.14.0",
     "@remix-run/node": "^1.5.1",
     "@remix-run/react": "^1.5.1",
     "@remix-run/serve": "^1.5.1",
-    "@supabase/supabase-js": "^1.35.3",
     "highlight.js": "^9.18.1",
     "marked": "^4.0.16",
     "react": "^17.0.2",
@@ -33,6 +33,7 @@
     "concurrently": "^7.2.1",
     "eslint": "^8.15.0",
     "postcss": "^8.4.14",
+    "prisma": "^3.14.0",
     "tailwindcss": "^3.0.24",
     "typescript": "^4.6.4"
   },
