--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "deploy": "flyctl deploy --remote-only",
     "dev": "concurrently \"npm run dev:css\" \"remix dev\"",
     "dev:css": "tailwindcss -w -i ./styles/app.css -o app/styles/app.css",
-    "start": "remix-serve build"
+    "start": "remix-serve build",
+    "test": "vitest",
+    "test:watch": "vitest watch"
   },
   "dependencies": {
     "@prisma/client": "^3.14.0",
@@ -22,19 +24,27 @@
     "tiny-invariant": "^1.2.0"
   },
   "devDependencies": {
+    "@faker-js/faker": "^7.2.0",
     "@remix-run/dev": "^1.5.1",
     "@remix-run/eslint-config": "^1.5.1",
     "@tailwindcss/typography": "^0.5.2",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^12.1.5",
     "@types/marked": "^4.0.3",
     "@types/react": "^17.0.45",
     "@types/react-dom": "^17.0.17",
+    "@vitejs/plugin-react": "^1.3.2",
     "autoprefixer": "^10.4.7",
     "concurrently": "^7.2.1",
     "eslint": "^8.15.0",
+    "happy-dom": "^5.2.0",
+    "jsdom": "^19.0.0",
     "postcss": "^8.4.14",
     "prisma": "^3.14.0",
     "tailwindcss": "^3.0.24",
-    "typescript": "^4.6.4"
+    "typescript": "^4.6.4",
+    "vite-tsconfig-paths": "^3.5.0",
+    "vitest": "^0.14.2"
   },
   "engines": {
     "node": ">=14"
