--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "dev:css": "tailwindcss -w -i ./styles/app.css -o app/styles/app.css",
     "start": "remix-serve build",
     "test": "vitest",
-    "test:watch": "vitest watch"
+    "test:watch": "vitest watch",
+    "typecheck": "tsc -b"
   },
   "dependencies": {
     "@prisma/client": "^3.14.0",
