--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -53,7 +53,9 @@ jobs:
           useLockFile: false
 
       - name: ⚡ Run vitest
-        run: npm run test:ci
+        run: npm run test -- --coverage --run
+        env:
+          DATABASE_URL: postgresql://sample-url/progress
         
   build:
     name: 🐳 Build
