--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "deploy": "flyctl deploy --remote-only",
     "dev": "concurrently \"npm run dev:css\" \"remix dev\"",
     "dev:css": "tailwindcss -w -i ./styles/app.css -o app/styles/app.css",
+    "lint": "eslint --cache --cache-location ./node_modules/.cache/eslint .",
     "start": "remix-serve build",
     "test": "vitest",
     "typecheck": "tsc -b"
@@ -37,7 +38,7 @@
     "autoprefixer": "^10.4.7",
     "c8": "^7.11.3",
     "concurrently": "^7.2.1",
-    "eslint": "^8.15.0",
+    "eslint": "^8.17.0",
     "happy-dom": "^5.2.0",
     "jsdom": "^19.0.0",
     "postcss": "^8.4.14",
