--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@remix-run/node": "^1.5.1",
     "@remix-run/react": "^1.5.1",
     "@remix-run/serve": "^1.5.1",
+    "dayjs": "^1.11.7",
     "highlight.js": "^11.5.1",
     "marked": "^4.0.16",
     "react": "^17.0.2",
